<resources>
    <string name="app_name">CourtCounter</string>
    <string name="reset">Reset</string>
    <string name="free_throw">Free throw</string>
    <string name="_2_points">+2 Points</string>
    <string name="_3_points">+3 Points</string>
    <string name="initial">0</string>
    <string name="team_b">Team B</string>
    <string name="team_a">Team A</string>
    <string name="basketball_championship">Basketball Championship</string>
</resources>
